--- a/Mary Problem/Mary's Problem.ipynb
+++ b/Mary Problem/Mary's Problem.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mary_path ='C:/Users/embibe/Documents/Python Scripts/MaryProblem.csv'\n",
+    "mary_path ='C:/Users/embibe/Documents/MyGit/PCode/Mary Problem/MaryProblem.csv'\n",
     "mary_data = pd.read_csv(mary_path)"
    ]
   },
@@ -115,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x25fb06d8348>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22ef9aaabc8>"
       ]
      },
      "execution_count": 4,
